CD/CP/Java/y.output
Terminals unused in grammar

   STRUCT
   EXTDEFS
   PARAS
   STMTS
   DEFS
   DECS
   ARGS
   INIT_ARGS


State 195 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | extdefs

    3 extdefs: extdef
    4        | extdefs extdef

    5 extdef: def
    6       | INT func compound_stmt
    7       | FLOAT func compound_stmt
    8       | CHAR func compound_stmt

    9 func: IDENTIFIER '(' paras ')'
   10     | IDENTIFIER '(' ')'

   11 paras: para
   12      | paras ',' para

   13 para: INT var

   14 var: IDENTIFIER
   15    | var '[' CONSTANT ']'

   16 stmts: stmt
   17      | stmts stmt

   18 stmt: compound_stmt
   19     | expr_stmt
   20     | selection_stmt
   21     | iteration_stmt
   22     | jump_stmt

   23 compound_stmt: '{' defs stmts '}'
   24              | '{' defs '}'
   25              | '{' stmts '}'
   26              | '{' '}'
   27              | ';'

   28 expr_stmt: expr ';'

   29 selection_stmt: IF '(' expr ')' stmt
   30               | IF '(' expr ')' stmt ELSE stmt

   31 iteration_stmt: FOR '(' expr ';' expr ';' expr ')' stmt
   32               | FOR '(' expr ';' expr ';' ')' stmt
   33               | FOR '(' expr ';' ';' expr ')' stmt
   34               | FOR '(' expr ';' ';' ')' stmt
   35               | FOR '(' ';' expr ';' expr ')' stmt
   36               | FOR '(' ';' expr ';' ')' stmt
   37               | FOR '(' ';' ';' expr ')' stmt
   38               | FOR '(' ';' ';' ')' stmt
   39               | WHILE '(' expr ')' stmt

   40 jump_stmt: RETURN expr ';'
   41          | CONTINUE ';'
   42          | BREAK ';'

   43 defs: def
   44     | defs def

   45 def: INT decs ';'

   46 decs: dec
   47     | decs ',' dec

   48 dec: var
   49    | var '=' init

   50 init: expr
   51     | '{' init_args '}'

   52 expr: assignment
   53     | READ '(' expr ')'

   54 assignment: logical_or
   55           | unary '=' assignment
   56           | unary ADD_ASSIGN assignment
   57           | unary SUB_ASSIGN assignment
   58           | unary MUL_ASSIGN assignment
   59           | unary DIV_ASSIGN assignment
   60           | unary MOD_ASSIGN assignment
   61           | unary AND_ASSIGN assignment
   62           | unary XOR_ASSIGN assignment
   63           | unary OR_ASSIGN assignment
   64           | unary SHL_ASSIGN assignment
   65           | unary SHR_ASSIGN assignment

   66 logical_or: logical_and
   67           | logical_or OR_OP logical_and

   68 logical_and: bit_or
   69            | logical_and AND_OP bit_or

   70 bit_or: bit_xor
   71       | bit_or '|' bit_xor

   72 bit_xor: bit_and
   73        | bit_xor '^' bit_and

   74 bit_and: equality
   75        | bit_and '&' equality

   76 equality: relational
   77         | equality EQ_OP relational
   78         | equality NE_OP relational

   79 relational: shift
   80           | relational '>' shift
   81           | relational GE_OP shift
   82           | relational '<' shift
   83           | relational LE_OP shift

   84 shift: additive
   85      | shift SHL_OP additive
   86      | shift SHR_OP additive

   87 additive: multi
   88         | additive '+' multi
   89         | additive '-' multi

   90 multi: unary
   91      | multi '*' unary
   92      | multi '/' unary
   93      | multi '%' unary

   94 unary: postfix
   95      | INC_OP unary
   96      | DEC_OP unary
   97      | '-' unary
   98      | '!' unary
   99      | '~' unary

  100 postfix: primary
  101        | postfix INC_OP
  102        | postfix DEC_OP
  103        | postfix '[' expr ']'
  104        | postfix '(' args ')'
  105        | postfix '(' ')'
  106        | postfix '.' IDENTIFIER

  107 primary: IDENTIFIER
  108        | CONSTANT
  109        | '(' expr ')'

  110 args: expr
  111     | args ',' expr

  112 init_args: init_arg
  113          | init_args ',' init_arg

  114 init_arg: expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 98
'%' (37) 93
'&' (38) 75
'(' (40) 9 10 29 30 31 32 33 34 35 36 37 38 39 53 104 105 109
')' (41) 9 10 29 30 31 32 33 34 35 36 37 38 39 53 104 105 109
'*' (42) 91
'+' (43) 88
',' (44) 12 47 111 113
'-' (45) 89 97
'.' (46) 106
'/' (47) 92
';' (59) 27 28 31 32 33 34 35 36 37 38 40 41 42 45
'<' (60) 82
'=' (61) 49 55
'>' (62) 80
'[' (91) 15 103
']' (93) 15 103
'^' (94) 73
'{' (123) 23 24 25 26 51
'|' (124) 71
'}' (125) 23 24 25 26 51
'~' (126) 99
error (256)
INC_OP (258) 95 101
DEC_OP (259) 96 102
SHL_OP (260) 85
SHR_OP (261) 86
LE_OP (262) 83
GE_OP (263) 81
EQ_OP (264) 77
NE_OP (265) 78
AND_OP (266) 69
OR_OP (267) 67
ADD_ASSIGN (268) 56
SUB_ASSIGN (269) 57
MUL_ASSIGN (270) 58
DIV_ASSIGN (271) 59
MOD_ASSIGN (272) 60
AND_ASSIGN (273) 61
XOR_ASSIGN (274) 62
OR_ASSIGN (275) 63
SHL_ASSIGN (276) 64
SHR_ASSIGN (277) 65
IDENTIFIER (278) 9 10 14 106 107
CONSTANT (279) 15 108
INT (280) 6 13 45
STRUCT (281)
FLOAT (282) 7
CHAR (283) 8
IF (284) 29 30
ELSE (285) 30
FOR (286) 31 32 33 34 35 36 37 38
CONTINUE (287) 41
BREAK (288) 42
RETURN (289) 40
READ (290) 53
WHILE (291) 39
EXTDEFS (292)
PARAS (293)
STMTS (294)
DEFS (295)
DECS (296)
ARGS (297)
INIT_ARGS (298)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
program (67)
    on left: 1 2, on right: 0
extdefs (68)
    on left: 3 4, on right: 2 4
extdef (69)
    on left: 5 6 7 8, on right: 3 4
func (70)
    on left: 9 10, on right: 6 7 8
paras (71)
    on left: 11 12, on right: 9 12
para (72)
    on left: 13, on right: 11 12
var (73)
    on left: 14 15, on right: 13 15 48 49
stmts (74)
    on left: 16 17, on right: 17 23 25
stmt (75)
    on left: 18 19 20 21 22, on right: 16 17 29 30 31 32 33 34 35 36
    37 38 39
compound_stmt (76)
    on left: 23 24 25 26 27, on right: 6 7 8 18
expr_stmt (77)
    on left: 28, on right: 19
selection_stmt (78)
    on left: 29 30, on right: 20
iteration_stmt (79)
    on left: 31 32 33 34 35 36 37 38 39, on right: 21
jump_stmt (80)
    on left: 40 41 42, on right: 22
defs (81)
    on left: 43 44, on right: 23 24 44
def (82)
    on left: 45, on right: 5 43 44
decs (83)
    on left: 46 47, on right: 45 47
dec (84)
    on left: 48 49, on right: 46 47
init (85)
    on left: 50 51, on right: 49
expr (86)
    on left: 52 53, on right: 28 29 30 31 32 33 34 35 36 37 39 40 50
    53 103 109 110 111 114
assignment (87)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65, on right: 52 55 56
    57 58 59 60 61 62 63 64 65
logical_or (88)
    on left: 66 67, on right: 54 67
logical_and (89)
    on left: 68 69, on right: 66 67 69
bit_or (90)
    on left: 70 71, on right: 68 69 71
bit_xor (91)
    on left: 72 73, on right: 70 71 73
bit_and (92)
    on left: 74 75, on right: 72 73 75
equality (93)
    on left: 76 77 78, on right: 74 75 77 78
relational (94)
    on left: 79 80 81 82 83, on right: 76 77 78 80 81 82 83
shift (95)
    on left: 84 85 86, on right: 79 80 81 82 83 85 86
additive (96)
    on left: 87 88 89, on right: 84 85 86 88 89
multi (97)
    on left: 90 91 92 93, on right: 87 88 89 91 92 93
unary (98)
    on left: 94 95 96 97 98 99, on right: 55 56 57 58 59 60 61 62 63
    64 65 90 91 92 93 95 96 97 98 99
postfix (99)
    on left: 100 101 102 103 104 105 106, on right: 94 101 102 103
    104 105 106
primary (100)
    on left: 107 108 109, on right: 100
args (101)
    on left: 110 111, on right: 104 111
init_args (102)
    on left: 112 113, on right: 51 113
init_arg (103)
    on left: 114, on right: 112 113


State 0

    0 $accept: . program $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3

    $default  reduce using rule 1 (program)

    program  go to state 4
    extdefs  go to state 5
    extdef   go to state 6
    def      go to state 7


State 1

    6 extdef: INT . func compound_stmt
   45 def: INT . decs ';'

    IDENTIFIER  shift, and go to state 8

    func  go to state 9
    var   go to state 10
    decs  go to state 11
    dec   go to state 12


State 2

    7 extdef: FLOAT . func compound_stmt

    IDENTIFIER  shift, and go to state 13

    func  go to state 14


State 3

    8 extdef: CHAR . func compound_stmt

    IDENTIFIER  shift, and go to state 13

    func  go to state 15


State 4

    0 $accept: program . $end

    $end  shift, and go to state 16


State 5

    2 program: extdefs .
    4 extdefs: extdefs . extdef

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3

    $default  reduce using rule 2 (program)

    extdef  go to state 17
    def     go to state 7


State 6

    3 extdefs: extdef .

    $default  reduce using rule 3 (extdefs)


State 7

    5 extdef: def .

    $default  reduce using rule 5 (extdef)


State 8

    9 func: IDENTIFIER . '(' paras ')'
   10     | IDENTIFIER . '(' ')'
   14 var: IDENTIFIER .

    '('  shift, and go to state 18

    $default  reduce using rule 14 (var)


State 9

    6 extdef: INT func . compound_stmt

    '{'  shift, and go to state 19
    ';'  shift, and go to state 20

    compound_stmt  go to state 21


State 10

   15 var: var . '[' CONSTANT ']'
   48 dec: var .
   49    | var . '=' init

    '['  shift, and go to state 22
    '='  shift, and go to state 23

    $default  reduce using rule 48 (dec)


State 11

   45 def: INT decs . ';'
   47 decs: decs . ',' dec

    ','  shift, and go to state 24
    ';'  shift, and go to state 25


State 12

   46 decs: dec .

    $default  reduce using rule 46 (decs)


State 13

    9 func: IDENTIFIER . '(' paras ')'
   10     | IDENTIFIER . '(' ')'

    '('  shift, and go to state 18


State 14

    7 extdef: FLOAT func . compound_stmt

    '{'  shift, and go to state 19
    ';'  shift, and go to state 20

    compound_stmt  go to state 26


State 15

    8 extdef: CHAR func . compound_stmt

    '{'  shift, and go to state 19
    ';'  shift, and go to state 20

    compound_stmt  go to state 27


State 16

    0 $accept: program $end .

    $default  accept


State 17

    4 extdefs: extdefs extdef .

    $default  reduce using rule 4 (extdefs)


State 18

    9 func: IDENTIFIER '(' . paras ')'
   10     | IDENTIFIER '(' . ')'

    INT  shift, and go to state 28
    ')'  shift, and go to state 29

    paras  go to state 30
    para   go to state 31


State 19

   23 compound_stmt: '{' . defs stmts '}'
   24              | '{' . defs '}'
   25              | '{' . stmts '}'
   26              | '{' . '}'

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    INT         shift, and go to state 36
    IF          shift, and go to state 37
    FOR         shift, and go to state 38
    CONTINUE    shift, and go to state 39
    BREAK       shift, and go to state 40
    RETURN      shift, and go to state 41
    READ        shift, and go to state 42
    WHILE       shift, and go to state 43
    '('         shift, and go to state 44
    '{'         shift, and go to state 19
    '}'         shift, and go to state 45
    ';'         shift, and go to state 20
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    stmts           go to state 49
    stmt            go to state 50
    compound_stmt   go to state 51
    expr_stmt       go to state 52
    selection_stmt  go to state 53
    iteration_stmt  go to state 54
    jump_stmt       go to state 55
    defs            go to state 56
    def             go to state 57
    expr            go to state 58
    assignment      go to state 59
    logical_or      go to state 60
    logical_and     go to state 61
    bit_or          go to state 62
    bit_xor         go to state 63
    bit_and         go to state 64
    equality        go to state 65
    relational      go to state 66
    shift           go to state 67
    additive        go to state 68
    multi           go to state 69
    unary           go to state 70
    postfix         go to state 71
    primary         go to state 72


State 20

   27 compound_stmt: ';' .

    $default  reduce using rule 27 (compound_stmt)


State 21

    6 extdef: INT func compound_stmt .

    $default  reduce using rule 6 (extdef)


State 22

   15 var: var '[' . CONSTANT ']'

    CONSTANT  shift, and go to state 73


State 23

   49 dec: var '=' . init

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    READ        shift, and go to state 42
    '('         shift, and go to state 44
    '{'         shift, and go to state 74
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    init         go to state 75
    expr         go to state 76
    assignment   go to state 59
    logical_or   go to state 60
    logical_and  go to state 61
    bit_or       go to state 62
    bit_xor      go to state 63
    bit_and      go to state 64
    equality     go to state 65
    relational   go to state 66
    shift        go to state 67
    additive     go to state 68
    multi        go to state 69
    unary        go to state 70
    postfix      go to state 71
    primary      go to state 72


State 24

   47 decs: decs ',' . dec

    IDENTIFIER  shift, and go to state 77

    var  go to state 10
    dec  go to state 78


State 25

   45 def: INT decs ';' .

    $default  reduce using rule 45 (def)


State 26

    7 extdef: FLOAT func compound_stmt .

    $default  reduce using rule 7 (extdef)


State 27

    8 extdef: CHAR func compound_stmt .

    $default  reduce using rule 8 (extdef)


State 28

   13 para: INT . var

    IDENTIFIER  shift, and go to state 77

    var  go to state 79


State 29

   10 func: IDENTIFIER '(' ')' .

    $default  reduce using rule 10 (func)


State 30

    9 func: IDENTIFIER '(' paras . ')'
   12 paras: paras . ',' para

    ')'  shift, and go to state 80
    ','  shift, and go to state 81


State 31

   11 paras: para .

    $default  reduce using rule 11 (paras)


State 32

   95 unary: INC_OP . unary

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    '('         shift, and go to state 44
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    unary    go to state 82
    postfix  go to state 71
    primary  go to state 72


State 33

   96 unary: DEC_OP . unary

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    '('         shift, and go to state 44
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    unary    go to state 83
    postfix  go to state 71
    primary  go to state 72


State 34

  107 primary: IDENTIFIER .

    $default  reduce using rule 107 (primary)


State 35

  108 primary: CONSTANT .

    $default  reduce using rule 108 (primary)


State 36

   45 def: INT . decs ';'

    IDENTIFIER  shift, and go to state 77

    var   go to state 10
    decs  go to state 11
    dec   go to state 12


State 37

   29 selection_stmt: IF . '(' expr ')' stmt
   30               | IF . '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 84


State 38

   31 iteration_stmt: FOR . '(' expr ';' expr ';' expr ')' stmt
   32               | FOR . '(' expr ';' expr ';' ')' stmt
   33               | FOR . '(' expr ';' ';' expr ')' stmt
   34               | FOR . '(' expr ';' ';' ')' stmt
   35               | FOR . '(' ';' expr ';' expr ')' stmt
   36               | FOR . '(' ';' expr ';' ')' stmt
   37               | FOR . '(' ';' ';' expr ')' stmt
   38               | FOR . '(' ';' ';' ')' stmt

    '('  shift, and go to state 85


State 39

   41 jump_stmt: CONTINUE . ';'

    ';'  shift, and go to state 86


State 40

   42 jump_stmt: BREAK . ';'

    ';'  shift, and go to state 87


State 41

   40 jump_stmt: RETURN . expr ';'

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    READ        shift, and go to state 42
    '('         shift, and go to state 44
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    expr         go to state 88
    assignment   go to state 59
    logical_or   go to state 60
    logical_and  go to state 61
    bit_or       go to state 62
    bit_xor      go to state 63
    bit_and      go to state 64
    equality     go to state 65
    relational   go to state 66
    shift        go to state 67
    additive     go to state 68
    multi        go to state 69
    unary        go to state 70
    postfix      go to state 71
    primary      go to state 72


State 42

   53 expr: READ . '(' expr ')'

    '('  shift, and go to state 89


State 43

   39 iteration_stmt: WHILE . '(' expr ')' stmt

    '('  shift, and go to state 90


State 44

  109 primary: '(' . expr ')'

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    READ        shift, and go to state 42
    '('         shift, and go to state 44
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    expr         go to state 91
    assignment   go to state 59
    logical_or   go to state 60
    logical_and  go to state 61
    bit_or       go to state 62
    bit_xor      go to state 63
    bit_and      go to state 64
    equality     go to state 65
    relational   go to state 66
    shift        go to state 67
    additive     go to state 68
    multi        go to state 69
    unary        go to state 70
    postfix      go to state 71
    primary      go to state 72


State 45

   26 compound_stmt: '{' '}' .

    $default  reduce using rule 26 (compound_stmt)


State 46

   97 unary: '-' . unary

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    '('         shift, and go to state 44
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    unary    go to state 92
    postfix  go to state 71
    primary  go to state 72


State 47

   98 unary: '!' . unary

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    '('         shift, and go to state 44
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    unary    go to state 93
    postfix  go to state 71
    primary  go to state 72


State 48

   99 unary: '~' . unary

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    '('         shift, and go to state 44
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    unary    go to state 94
    postfix  go to state 71
    primary  go to state 72


State 49

   17 stmts: stmts . stmt
   25 compound_stmt: '{' stmts . '}'

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    IF          shift, and go to state 37
    FOR         shift, and go to state 38
    CONTINUE    shift, and go to state 39
    BREAK       shift, and go to state 40
    RETURN      shift, and go to state 41
    READ        shift, and go to state 42
    WHILE       shift, and go to state 43
    '('         shift, and go to state 44
    '{'         shift, and go to state 19
    '}'         shift, and go to state 95
    ';'         shift, and go to state 20
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    stmt            go to state 96
    compound_stmt   go to state 51
    expr_stmt       go to state 52
    selection_stmt  go to state 53
    iteration_stmt  go to state 54
    jump_stmt       go to state 55
    expr            go to state 58
    assignment      go to state 59
    logical_or      go to state 60
    logical_and     go to state 61
    bit_or          go to state 62
    bit_xor         go to state 63
    bit_and         go to state 64
    equality        go to state 65
    relational      go to state 66
    shift           go to state 67
    additive        go to state 68
    multi           go to state 69
    unary           go to state 70
    postfix         go to state 71
    primary         go to state 72


State 50

   16 stmts: stmt .

    $default  reduce using rule 16 (stmts)


State 51

   18 stmt: compound_stmt .

    $default  reduce using rule 18 (stmt)


State 52

   19 stmt: expr_stmt .

    $default  reduce using rule 19 (stmt)


State 53

   20 stmt: selection_stmt .

    $default  reduce using rule 20 (stmt)


State 54

   21 stmt: iteration_stmt .

    $default  reduce using rule 21 (stmt)


State 55

   22 stmt: jump_stmt .

    $default  reduce using rule 22 (stmt)


State 56

   23 compound_stmt: '{' defs . stmts '}'
   24              | '{' defs . '}'
   44 defs: defs . def

    INC_OP      shift, and go to state 32
    DEC_OP      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    CONSTANT    shift, and go to state 35
    INT         shift, and go to state 36
    IF          shift, and go to state 37
    FOR         shift, and go to state 38
    CONTINUE    shift, and go to state 39
    BREAK       shift, and go to state 40
    RETURN      shift, and go to state 41
    READ        shift, and go to state 42
    WHILE       shift, and go to state 43
    '('         shift, and go to state 44
    '{'         shift, and go to state 19
    '}'         shift, and go to state 97
    ';'         shift, and go to state 20
    '-'         shift, and go to state 46
    '!'         shift, and go to state 47
    '~'         shift, and go to state 48

    stmts           go to state 98
    stmt            go to state 50
    compound_stmt   go to state 51
    expr_stmt       go to state 52
    selection_stmt  go to state 53
    iteration_stmt  go to state 54
    jump_stmt       go to state 55
    def             go to state 99
    expr            go to state 58
    assignment      go to state 59
    logical_or      go to state 60
    logical_and     go to state 61
    bit_or          go to state 62
    bit_xor         go to state 63
    bit_and         go to state 64
    equality        go to state 65
    relational      go to state 66
    shift           go to state 67
    additive        go to state 68
    multi           go to state 69
    unary           go to state 70
    postfix         go to state 71
    primary         go to state 72


State 57

   43 defs: def .

    $default  reduce using rule 43 (defs)


State 58

   28 expr_stmt: expr . ';'

    ';'  shift, and go to state 100


State 59

   52 expr: assignment .

    $default  reduce using rule 52 (expr)


State 60
